[package]
name = "sms-verifier"
version = "0.0.1"
authors = ["Matej Gera <matejgera@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3.0.0-beta.1", features=["rustls"] }
async-trait = "0.1.30"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
url = "2.1"

[dev-dependencies]
actix-rt = "2.0.0"